clusters/harvey-moomboo-space/flux-netpol/allow-egress.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-egress
  namespace: "cozy-fluxcd"
spec:
  policyTypes:
    - Ingress
    - Egress
  ingress:
  - from:
    - podSelector: {}
  egress:
    - {}
  podSelector: {}
