clusters/harvey-moomboo-space/flux-netpol/allow-webhooks.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-webhooks
  namespace: "cozy-fluxcd"
spec:
  policyTypes:
    - Ingress
  ingress:
    - from:
        - ipBlock:
            cidr: 0.0.0.0/0
  podSelector:
    matchLabels:
      app: notification-controller
